대상 프레임워크 추가

--- a/VagabondK/VagabondK.csproj
+++ b/VagabondK/VagabondK.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net5.0;net461</TargetFrameworks>
     <RootNamespace>System</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\VagabondK.xml</DocumentationFile>
     <Company>Vagabond K</Company>
@@ -12,6 +12,8 @@
     <RepositoryUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>그냥 Vagabond K가 개인적으로 편하게 코딩하려고 만든 라이브러리입니다.</Description>
+    <Version>1.0.1</Version>
+    <PackageProjectUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
