--- a/VagabondK/VagabondK.csproj
+++ b/VagabondK/VagabondK.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
     <RootNamespace>System</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\VagabondK.xml</DocumentationFile>
     <Company>Vagabond K</Company>
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>그냥 Vagabond K가 개인적으로 편하게 코딩하려고 만든 라이브러리입니다.</Description>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <PackageProjectUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK</PackageProjectUrl>
   </PropertyGroup>
 
