--- a/VagabondK.DependencyInjection/VagabondK.DependencyInjection.csproj
+++ b/VagabondK.DependencyInjection/VagabondK.DependencyInjection.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <RootNamespace>VagabondK</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\VagabondK.DependencyInjection.xml</DocumentationFile>
     <Company>Vagabond K</Company>
     <Authors>Vagabond K</Authors>
@@ -11,7 +12,7 @@
     <RepositoryUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK.DependencyInjection</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>그냥 Vagabond K가 개인적으로 편하게 코딩하려고 만든 DI 라이브러리입니다.</Description>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageProjectUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK.DependencyInjection</PackageProjectUrl>
   </PropertyGroup>
 
