--- a/VagabondK.Windows/VagabondK.Windows.csproj
+++ b/VagabondK.Windows/VagabondK.Windows.csproj
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK.Windows</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>그냥 Vagabond K가 개인적으로 편하게 코딩하려고 만든 Windows 운영체제용 라이브러리입니다.</Description>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <PackageProjectUrl>https://github.com/Vagabond-K/Framework/tree/master/VagabondK.Windows</PackageProjectUrl>
   </PropertyGroup>
 
@@ -32,7 +32,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="PresentationFramework.Classic" />
     <Reference Include="System.Xaml" />
+    <Reference Include="System.Windows.Controls.Ribbon" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
 
